# DEVI4.0

./: pyproject.toml  run.py  scan_debug.txt
devi.egg-info/: SOURCES.txt  entry_points.txt  top_level.txt
docs/: devi_5_0_build_prompt.md  first_live_test_dry_run_checklist.md  phase1_5_plan.md  phase1_closeout.md  phase2_design.md  phase2_pre_live_safety_report.md
logs/eval/: decisions_2026-04-30.jsonl  decisions_2026-05-04.jsonl  snapshots_2026-05-04.jsonl  stability_evidence_20260504_105252.json  trades_2026-05-04.jsonl
logs/prod/: decisions_2026-05-04.jsonl  decisions_2026-05-05.jsonl  decisions_2026-05-06.jsonl  live_orders_2026-05-04.jsonl  snapshots_2026-05-04.jsonl  snapshots_2026-05-05.jsonl
sandbox/: check_telemetry.py  run_paper_fill_validation.py  run_paper_mt5_session.py  run_paper_stability.py
src/: cli.py
src/config/: defaults.json  live_market_watch.json  live_one_order_test.json  live_preflight.json  loader.py  paper.json  schema.py
src/context/: __init__.py  builder.py  h4_context.py  references.py  regime.py  session_levels.py  trend.py
src/core/: arming.py  enums.py  kill_switch.py  models.py  normalization.py  runtime_state.py
src/data/: base.py  csv_source.py  mt5_guard.py  mt5_source.py
src/decision/: __init__.py  confluence.py  contradictions.py  engine.py  entry_gate.py  session_proximity.py  setup_rules.py
tests/: test_phase0_closeout.py  test_phase1_batch1_data_and_paper.py
tools/: backfill_supabase.py  check_comparability.py  emergency_close.py  evidence_pack.py  live_scan_loop.py  replay.py  validate_telemetry.py
(+130 files in other folders)
