[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "devi"
version = "4.0.0"
description = "D.E.V.I 4.0 deterministic MT5 automation scaffold"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
devi = "devi:main"

[tool.setuptools]
py-modules = ["devi"]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "tools*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
